#ifndef IVOLTAGE_HPP
#define IVOLTAGE_HPP

class IVoltage
{
public:
  virtual float Measure() = 0;
};

#endif